--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,10 @@
 // Variables
 $secondary: #f4f4f4;
 
+$primary: #401f7c;
+$border-radius: 0;
+$border-radius-sm: 0;
+$border-radius-lg: 0;
+
 @import "./style";
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
